Fix: Container overlapping the navbar

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-color: black;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .navbar-container {
